k8s/user-management/overlays/local/postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-postgres
  namespace: user-management
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: postgres
            port:
              number: 5439
        path: /postgres
        pathType: Prefix
